# ai-textbook

./: .eslintignore  .gitignore  QWEN.md  README.md  docker-compose.yml  test-chatbot.html  test_script.sh
.specify/memory/: constitution.md
.specify/templates/: phr-template.prompt.md  plan-template.md  spec-template.md  tasks-template.md
backend/: jest.config.js  main.py  package-lock.json  package.json  requirements.txt  test_api.py
backend/src/: index.ts
book-website/: docusaurus.config.ts  package-lock.json  package.json
book-website/docs/: auth-integration.md
rag-chatbot/: README.md  pyproject.toml
rag-chatbot/docs/: api.md  index.md
rag-chatbot/src/: main.py
rag-chatbot/src/api/: router.py
rag-chatbot/src/config/: database.py  qdrant_config.py  settings.py
rag-chatbot/src/contextual_rag_lookup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag-chatbot/src/models/: base_models.py  request_models.py
rag-chatbot/src/services/: chat_history_service.py  context_consistency_service.py  qdrant_service.py  rag_service.py
rag-chatbot/src/utils/: exceptions.py
rag-chatbot/tests/unit/: test_api.py  test_chat_history_service.py  test_rag_service.py
specs/001-rag-chatbot-docusaurus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-better-auth-personalization/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
temp-docusaurus-site/: docusaurus.config.ts  jest.config.js  package-lock.json  package.json  setup-localStorage-polyfill.js  sidebars.ts  sidebars.ts.save  tsconfig.json
(+187 files in other folders)
